# alphamayo_VLA_test_webui_opti.

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml  pyproject.toml.backup  uv.lock.backup
src/alpamayo_r1/: config.py  helper.py  load_physical_aiavdataset.py  test_inference.py
src/alpamayo_r1/action_space/: __init__.py  unicycle_accel_curvature.py  utils.py
src/alpamayo_r1/common/: logging.py
src/alpamayo_r1/diffusion/: flow_matching.py
src/alpamayo_r1/geometry/: coordinates.py
src/alpamayo_r1/models/: action_in_proj.py  alpamayo_r1.py  base_model.py
web_demo/: app.py  gpu_stats.py  inference_runner.py  probe_vit.py  quant.py  sanity_check.py  test_quant.py  video_utils.py  vit_trt_runner.py
web_demo/old/: inference_runner_12626.py
web_demo/templates/: index.html
web_demo/vision_onnx_trt/: bake_grid_thw.py  build_vit_trt.sh  export_vit_onnx.py  verify_onnx.py
